# marketlab

./: .gitignore  README.md  pyproject.toml
marketlab/: .env.swp  .gitignore  __init__.py  config.py  results_spy.csv  results_spy_gap_range_yearly.csv  results_spy_gap_range_yearly_by_regime.csv  results_spy_rolling.csv  results_spy_yearly.csv  results_trade_spy_gap_range_yearly_by_regime.csv  summary_spy_gap_range_yearly.csv  summary_spy_gap_range_yearly_by_regime.csv  summary_spy_yearly.csv
marketlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
marketlab/backtest/: simple.py
marketlab/data/: arctic.py
marketlab/data/polygon_massive/: download_daily_flatfiles.py  ingest_daily.py  ingest_daily_from_cache.py  ingest_daily_monthly.py  update_flatfiles.py  update_massive_flatfiles.py
marketlab/events/: __init__.py  base.py  composable.py  events.txt  events_gap_range.txt  library.py  parser.py  regimes.txt  registry.py
marketlab/features/: indicators.py  volatility.py
marketlab/legacy/: marketdata.py  update_massive_flatfiles.py
marketlab/outcomes/: forward.py
marketlab/regimes/: __init__.py  library.py  parser.py  registry.py
marketlab/research/: evaluate.py  splits.py
marketlab/scripts/: backfill_daily_monthly.py  backtest_event.py  eval_event.py  eval_event_bank.py  ingest_daily_from_cache.py  ingest_daily_massive.py  summarize_event_bank.py  update_daily.py  update_massive_flatfiles.py
marketlab/trading/: returns.py  signals.py
