[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketlab"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "pandas",
  "numpy",
  "arcticdb",
  "boto3",
  "requests",
]

[tool.setuptools]
packages = ["marketlab"]
